--- a/exmple_sending.html
+++ b/exmple_sending.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Upload a file and JSON</h1>
-    <form action="http://localhost:5000/upload" method="POST" enctype="multipart/form-data">
+    <form action="http://mysite.com:5000/upload" method="POST" enctype="multipart/form-data">
         <!-- File Input -->
         <input type="file" name="file" required>
 
