add start of prefrences

--- a/SimpleWaf/web/public/loginScreen.html
+++ b/SimpleWaf/web/public/loginScreen.html
@@ -7,16 +7,12 @@
 </head>
 <body>
     <!--user details for signup-->
-    <form id="signUpForm">
-        <input type="text" id="hostNameInput" placeholder="website host name"><br><br>
-        <input type="text" id="emailInput" placeholder="email address"><br><br>
+    <form id="loginForm">
         <input type="text" id="userNameInput" placeholder="user name"><br><br>
         <input type="password" id="passwordInput" placeholder="password"><br><br>
-        <input type="password" id="passwordConfirmInput" placeholder="confirm password"><br><br>
         <input type="submit" id="submitBtn">
     </form>
     <div id="msgResult"></div>
-
 <!--this will send a request to flask for getting the js file-->
 <script src="signUpScreen.js"></script>
 
