--- a/SimpleWaf/web/public/signUpScreen.html
+++ b/SimpleWaf/web/public/signUpScreen.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -13,12 +14,13 @@
         <input type="text" id="userNameInput" placeholder="user name"><br><br>
         <input type="password" id="passwordInput" placeholder="password"><br><br>
         <input type="password" id="passwordConfirmInput" placeholder="confirm password"><br><br>
-        <input type="submit" id="submitBtn">
+        <input type="submit" id="submitBtn" class="btn btn-primary">
     </form>
     <div id="msgResult"></div>
 
 <!--this will send a request to flask for getting the js file-->
 <script src="signUpScreen.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 </html>
