--- a/SimpleWaf/tests/clickJacking/malWeb.html
+++ b/SimpleWaf/tests/clickJacking/malWeb.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-	<h1>Trying to connect the website dirctly without using waf protection:<h1>
+	<h1>Trying to connect the website directly without using waf protection:<h1>
     <iframe src="http://51.20.52.196" title="myWebWithout waf protection"></iframe>
 	<h1>Trying to connect the website via waf:<h1>
     <iframe src="http:/phisherWeb.com:5000" title="myWeb With waf protection"></iframe>
