--- a/SimpleWaf/server_client/web_files/index.html
+++ b/SimpleWaf/server_client/web_files/index.html
@@ -6,15 +6,15 @@
     <title>Web Application Firewall (WAF)</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column; /* Stack elements vertically */
+    align-items: center;
+    min-height: 100vh; /* Ensures full height */
+}
         .container {
             background-color: white;
             border-radius: 10px;
@@ -44,15 +44,38 @@
         .btn:hover {
             background-color: #0056b3;
         }
+		
+		.navbar {
+            background-color: #333;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+        }
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            padding: 14px 20px;
+            display: block;
+        }
+        .navbar a:hover {
+            background-color: #575757;
+        }
     </style>
 </head>
 <body>
-
+   <div class="navbar">
+        <a href="/" target="_top">Home</a>
+        <a href="login" target="_top">Login</a>
+        <a href="add_website" target="_top">Add Website</a>
+        <a href="add_user" target="_top">Add User</a>
+        <a href="see_preferences" target="_top">See Preferences</a>
+        <a href="log_file" target="_top">See Log File</a>
+    </div>
     <div class="container">
         <h1>Web Application Firewall (WAF)</h1>
         <p>Our Web Application Firewall (WAF) is protecting your service from various online threats, including SQL Injection, Cross-Site Scripting (XSS), and more. For secure access, please log in.</p>
         <a href="/login" class="btn">Go to Login</a>
     </div>
-
 </body>
 </html>
