treat empty log file

--- a/SimpleWaf/server_client/web_files/index.html
+++ b/SimpleWaf/server_client/web_files/index.html
@@ -69,7 +69,7 @@
         <a href="login" target="_top">Login</a>
         <a href="add_website" target="_top">Add Website</a>
         <a href="add_user" target="_top">Add User</a>
-        <a href="see_preferences" target="_top">See Preferences</a>
+        <a href="see_preferences" target="_top">See and Set Preferences</a>
         <a href="log_file" target="_top">See Log File</a>
     </div>
     <div class="container">
