add more gui staff

--- a/SimpleWaf/server_client/web_files/add_user.html
+++ b/SimpleWaf/server_client/web_files/add_user.html
@@ -7,6 +7,10 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+			background-image: url('images/backround3_waf.png');
+			background-size: 110%;  /* Crop the image by scaling it slightly bigger */
+      background-position: center;  /* Center the image */
+      background-repeat: no-repeat;  /* Prevent the image from repeating */
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
