--- a/SimpleWaf/server_client/web_files/index.html
+++ b/SimpleWaf/server_client/web_files/index.html
@@ -14,6 +14,7 @@
     flex-direction: column; /* Stack elements vertically */
     align-items: center;
     min-height: 100vh; /* Ensures full height */
+	
 }
         .container {
             background-color: white;
@@ -77,5 +78,6 @@
         <p>Our Web Application Firewall (WAF) is protecting your service from various online threats, including SQL Injection, Cross-Site Scripting (XSS), and more. For secure access, please log in.</p>
         <a href="/login" class="btn">Go to Login</a>
     </div>
+	<img src="images/img_waf.png" width=250px height=250px>
 </body>
 </html>
