--- a/SimpleWaf/server_client/web_files/login.html
+++ b/SimpleWaf/server_client/web_files/login.html
@@ -6,6 +6,10 @@
     <title>Login</title>
     <style>
         body {
+		background-image: url('images/backroung_waf.png');
+		background-size: 110%;  /* Crop the image by scaling it slightly bigger */
+      background-position: center;  /* Center the image */
+      background-repeat: no-repeat;  /* Prevent the image from repeating */
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             margin: 0;
