after login user go directly to home

--- a/SimpleWaf/server_client/web_files/login.html
+++ b/SimpleWaf/server_client/web_files/login.html
@@ -96,7 +96,7 @@
                 //the server returns a success field in the response
                 if (data.success) {
 					alert("login good! you can use now funcs for logged user");
-                    //window.location.href = '/dashboard';
+                    window.location.href = '/';
                 } else {
 					//error msg
                     document.getElementById('error-message').style.display = 'block';
