--- a/SimpleWaf/server_client/web_files/add_website.html
+++ b/SimpleWaf/server_client/web_files/add_website.html
@@ -94,6 +94,7 @@
             .then(data => {
                 if (data.success) {
                     alert("Website added successfully!");
+					window.location.href = '/';
                 } else {
 				console.log(data);
 				document.getElementById('error-message').textContent = data.message;
