--- a/SimpleWaf/server_client/web_files/index.html
+++ b/SimpleWaf/server_client/web_files/index.html
@@ -62,6 +62,14 @@
         .navbar a:hover {
             background-color: #575757;
         }
+		.user-info {
+            color: black;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 20px;
+            background-color: rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -73,6 +81,9 @@
         <a href="see_preferences" target="_top">See and Set Preferences</a>
         <a href="log_file" target="_top">See Log File</a>
     </div>
+	<div class="user-info">
+            Hello, Guest
+        </div>
     <div class="container">
         <h1>Web Application Firewall (WAF)</h1>
         <p>Our Web Application Firewall (WAF) is protecting your service from various online threats, including SQL Injection, Cross-Site Scripting (XSS), and more. For secure access, please log in.</p>
